--- a/package.json
+++ b/package.json
@@ -55,8 +55,9 @@
     "eslint-plugin-prettier": "^4.0.0",
     "hardhat-gas-reporter": "^1.0.8",
     "husky": "^7.0.2",
+    "lint-staged": "^13.0.3",
     "prettier": "^2.4.0",
-    "prettier-plugin-solidity": "^1.0.0-beta.18",
+    "prettier-plugin-solidity": "^1.0.0-rc.1",
     "pretty-quick": "^3.1.1",
     "solidity-coverage": "^0.7.17"
   },
